objects/ssot__QuoteProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Quote Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ListPriceAmount__c</fullName>
        <label>List Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceBookEntryId__c</fullName>
        <label>Price Book Entry</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuoteId__c</fullName>
        <label>Quote</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuoteProduct_QuoteId_map_Quote_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuoteProduct_QuoteId_map_Quote_Id_N_1</label>
        <referenceTo>ssot__Quote__dlm</referenceTo>
        <relationshipLabel>QuoteProduct_QuoteId_map_Quote_Id_N_1</relationshipLabel>
        <relationshipName>QuoteProduct_QuoteId_map_Quote_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__QuotedQuantity__c</fullName>
        <label>Quoted Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmount__c</fullName>
        <label>Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1711688038150_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuoteProduct_PriceBookEntryId_map_Pr_rel</label>
        <referenceTo>ssot__PriceBookEntry__dlm</referenceTo>
        <relationshipLabel>QuoteProduct_PriceBookEntryId_map_Pr_rel</relationshipLabel>
        <relationshipName>rel_1711688038150_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545870238_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuoteProduct_ProductId_map_Product_I_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>QuoteProduct_ProductId_map_Product_I_rel</relationshipLabel>
        <relationshipName>rel_1718545870238_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>